<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".searchuser">

    <TableRow android:layout_margin="30px">

        <TextView
            android:layout_weight="1"
            android:text="@string/id"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/idtxt"
            android:layout_weight="3"
            android:hint="@string/enterid" />
    </TableRow>

    <TableRow>

        <TextView android:layout_weight="1" />

        <Button
            android:padding="20px"
            android:onClick="onsearchuserclick"
            android:text="@string/searchuser" />
    </TableRow>

    <TableRow android:layout_margin="30px">

        <ListView
            android:id="@+id/lst"
            android:layout_weight="1" />
    </TableRow>

</TableLayout>